--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "typicms/base",
+    "name": "ahuezo/typi-base",
     "description": "Multilingual CMS built with Laravel 5",
     "keywords": ["cms", "multilingual", "laravel", "typi"],
     "license": "MIT",
@@ -25,20 +25,20 @@
         "propaganistas/laravel-translatable-bootforms": "~1.3.2",
         "roumen/feed": "~2.10.1",
         "spatie/laravel-permission": "~1.5.2",
-        "typicms/nestablecollection": "~1.1.3",
-        "typicms/core": "~2.9.0",
-        "typicms/blocks": "~2.9.0",
-        "typicms/dashboard": "~2.9.0",
-        "typicms/files": "~2.9.0",
-        "typicms/galleries": "~2.9.0",
-        "typicms/roles": "~2.9.0",
-        "typicms/history": "~2.9.0",
-        "typicms/menus": "~2.9.0",
-        "typicms/pages": "~2.9.0",
-        "typicms/settings": "~2.9.0",
-        "typicms/sitemap": "~2.9.0",
-        "typicms/translations": "~2.9.0",
-        "typicms/users": "~2.9.0"
+        "ahuezo/typi-nestablecollection": "~1.1.3",
+        "ahuezo/typi-core": "~2.9.0",
+        "ahuezo/typi-blocks": "~2.9.0",
+        "ahuezo/typi-dashboard": "~2.9.0",
+        "ahuezo/typi-files": "~2.9.0",
+        "ahuezo/typi-galleries": "~2.9.0",
+        "ahuezo/typi-roles": "~2.9.0",
+        "ahuezo/typi-history": "~2.9.0",
+        "ahuezo/typi-menus": "~2.9.0",
+        "ahuezo/typi-pages": "~2.9.0",
+        "ahuezo/typi-settings": "~2.9.0",
+        "ahuezo/typi-sitemap": "~2.9.0",
+        "ahuezo/typi-translations": "~2.9.0",
+        "ahuezo/typi-users": "~2.9.0"
     },
     "require-dev": {
         "laracasts/generators": "~1.1",
