Fixed repo names Add DB_PREFIX to env example

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "typicms/base",
+    "name": "ahuezo/typi-base",
     "description": "Multilingual CMS built with Laravel 5",
     "keywords": ["cms", "multilingual", "laravel", "typi"],
     "license": "MIT",
@@ -24,22 +24,22 @@
         "roumen/feed": "~2.10.1",
         "rinvex/repository": "2.0.*",
         "spatie/laravel-permission": "~1.5.0",
-        "typicms/laravel-translatable-bootforms": "dev-master",
-        "typicms/nestablecollection": "~1.1.1",
-        "typicms/core": "dev-dev",
-        "typicms/objects": "dev-dev",
-        "typicms/blocks": "dev-dev",
-        "typicms/dashboard": "dev-dev",
-        "typicms/files": "dev-dev",
-        "typicms/galleries": "dev-dev",
-        "typicms/roles": "dev-dev",
-        "typicms/history": "dev-dev",
-        "typicms/menus": "dev-dev",
-        "typicms/pages": "dev-dev",
-        "typicms/settings": "dev-dev",
-        "typicms/sitemap": "dev-dev",
-        "typicms/translations": "dev-dev",
-        "typicms/users": "dev-dev"
+        "ahuezo/laravel-translatable-bootforms": "dev-master",
+        "ahuezo/typi-nestablecollection": "~1.1.1",
+        "ahuezo/typi-core": "dev-dev",
+        "ahuezo/typi-objects": "dev-dev",
+        "ahuezo/typi-blocks": "dev-dev",
+        "ahuezo/typi-dashboard": "dev-dev",
+        "ahuezo/typi-files": "dev-dev",
+        "ahuezo/typi-galleries": "dev-dev",
+        "ahuezo/typi-roles": "dev-dev",
+        "ahuezo/typi-history": "dev-dev",
+        "ahuezo/typi-menus": "dev-dev",
+        "ahuezo/typi-pages": "dev-dev",
+        "ahuezo/typi-settings": "dev-dev",
+        "ahuezo/typi-sitemap": "dev-dev",
+        "ahuezo/typi-translations": "dev-dev",
+        "ahuezo/typi-users": "dev-dev"
     },
     "require-dev": {
         "laracasts/generators": "~1.1",
