--- a/composer.json
+++ b/composer.json
@@ -26,20 +26,20 @@
         "spatie/laravel-permission": "~1.5.0",
         "ahuezo/laravel-translatable-bootforms": "dev-master",
         "ahuezo/typi-nestablecollection": "~1.1.1",
-        "ahuezo/typi-core": "dev-dev",
-        "ahuezo/typi-objects": "dev-dev",
-        "ahuezo/typi-blocks": "dev-dev",
-        "ahuezo/typi-dashboard": "dev-dev",
-        "ahuezo/typi-files": "dev-dev",
-        "ahuezo/typi-galleries": "dev-dev",
-        "ahuezo/typi-roles": "dev-dev",
-        "ahuezo/typi-history": "dev-dev",
-        "ahuezo/typi-menus": "dev-dev",
-        "ahuezo/typi-pages": "dev-dev",
-        "ahuezo/typi-settings": "dev-dev",
-        "ahuezo/typi-sitemap": "dev-dev",
-        "ahuezo/typi-translations": "dev-dev",
-        "ahuezo/typi-users": "dev-dev"
+        "ahuezo/typi-core": "~3.0.0",
+        "ahuezo/typi-objects": "~3.0.0",
+        "ahuezo/typi-blocks": "~3.0.0",
+        "ahuezo/typi-dashboard": "~3.0.0",
+        "ahuezo/typi-files": "~3.0.0",
+        "ahuezo/typi-galleries": "~3.0.0",
+        "ahuezo/typi-roles": "~3.0.0",
+        "ahuezo/typi-history": "~3.0.0",
+        "ahuezo/typi-menus": "~3.0.0",
+        "ahuezo/typi-pages": "~3.0.0",
+        "ahuezo/typi-settings": "~3.0.0",
+        "ahuezo/typi-sitemap": "~3.0.0",
+        "ahuezo/typi-translations": "~3.0.0",
+        "ahuezo/typi-users": "~3.0.0"
     },
     "require-dev": {
         "laracasts/generators": "~1.1",
