--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,12 @@
         "ahuezo/typi-translations": "~3.0.0",
         "ahuezo/typi-users": "~3.0.0"
     },
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/ahuezo/typi-base.git"
+        }
+    ],
     "require-dev": {
         "laracasts/generators": "~1.1",
         "fzaninotto/faker": "~1.4",
